# bips2bib

./: .gitignore  LICENSE.txt  README.md  generate.py  pyproject.toml
.github/workflows/: checks.yml  generate-bib.yml  nightly.yml
src/bips2bib/: __main__.py  cli.py  generate.py  titlecase.py
