[project]
name = "bips2bib"
version = "1.0.0"
description = "Generate a BibTeX file from the BIPs repository (Bitcoin Improvement Proposals)" 
readme = "README.md"
authors = [
    { name = "Tim Ruffing", email = "me@real-or-random.org" }
]
license = "MIT"
license-files = ["LICEN[CS]E.*"]
requires-python = ">=3.10"
dependencies = []

[project.urls]
homepage = "https://github.com/real-or-random/bips2bip"

[project.scripts]
bips2bib = "bips2bib.cli:app"

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"
